@@ -75,7 +75,7 @@ static void log_end()
 static void close_all()
 {
 	if (watchdog != -1) {
-		if ( write(watchdog, "V", 1) < 0 ) {
+		if (write(watchdog, "V", 1) < 0 ) {
 			int err = errno;
 #if USE_SYSLOG
 	                syslog(LOG_ERR, "write watchdog device gave error %d = '%m'!", err);
@@ -189,7 +189,12 @@ static void read_config(char *filename, char *progname)
 		        schedprio = atol(line + i);
 	    } 
             else {
-                fprintf(stderr, "Ignoring config line: %s\n", line);
+                /*
+		 * do not print an error message here because we usually use
+		 * watchdog's config file which may contain far more valid
+		 * options than we understand 
+		 */
+		/* fprintf(stderr, "Ignoring config line: %s\n", line); */
             }
         }
     }
@@ -209,12 +214,31 @@ int main(int argc, char *const argv[])
     pid_t child_pid;
     int count = 0;
     int c;
-    char *opts = "c:";
+    /* allow all options watchdog understands too */
+#if USE_SYSLOG
+    char *opts = "d:i:n:fsvbql:p:t:c:r:m:a:";
     struct option long_options[] =
     {
-        {"config-file", required_argument, NULL, 'c'},
+	{"config-file", required_argument, NULL, 'c'},
+	{"force", no_argument, NULL, 'f'},
+	{"sync", no_argument, NULL, 's'},
+	{"no-action", no_argument, NULL, 'q'},
+	{"verbose", no_argument, NULL, 'v'},
+	{"softboot", no_argument, NULL, 'b'},
 	{NULL, 0, NULL, 0}
     };
+#else				/* USE_SYSLOG */
+    char *opts = "d:i:n:fsbql:p:t:c:r:m:a:";
+    struct option long_options[] =
+    {
+	{"config-file", required_argument, NULL, 'c'},
+	{"force", no_argument, NULL, 'f'},
+	{"sync", no_argument, NULL, 's'},
+	{"no-action", no_argument, NULL, 'q'},
+	{"softboot", no_argument, NULL, 'b'},
+	{NULL, 0, NULL, 0}
+    };
+#endif				/* USE_SYSLOG */
 
     progname = basename(argv[0]);
 
@@ -222,11 +246,30 @@ int main(int argc, char *const argv[])
     while ((c = getopt_long(argc, argv, opts, long_options, NULL)) != EOF) {
 	if (c == -1)
 	    break;
-	
-	if (c == 'c')
+	switch (c) {
+	case 'c':
 	    filename = optarg;
-	else
+	    break;
+	case 'n':
+	case 'p':
+	case 'a':
+	case 'r':
+	case 'd':
+	case 't':
+	case 'l':
+	case 'm':
+	case 'i':
+	case 'f':
+	case 's':
+	case 'b':
+	case 'q':
+#if USE_SYSLOG
+	case 'v':
+#endif				/* USE_SYSLOG */
+	     break;
+	default:
 	    usage();
+	}
     }
 
     read_config(filename, progname);
