@@ -458,4 +458,6 @@ Thu, 12 Mar 2009 14:36:01 +0100
 	  of timeouts.
 	- Added another patch by Lon Hohberger <lhh@redhat.com> to make sure
 	  signal handler does not call not-signal safe functions.
+	- Made wd_keepalive accept all options watchdog accepts and not throw
+	  errors on those it does not use itself.
 
